terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

resource "aws_security_group" "gabrielm_sg-v2" {
  name        = "gabrielm-sg-v2"
  description = "Allow SSH and HTTPS only (gabrielm)"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS for Grafana via NGINX"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "gabrielm-sg"
  }
}

resource "aws_instance" "gabrielm_ec2" {
  ami                         = var.ami
  instance_type               = var.instance_type
  subnet_id                   = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.gabrielm_sg-v2.id]
  associate_public_ip_address = true
  key_name                    = var.key_name

  user_data = file("${path.module}/../user-data.sh")

  tags = {
    Name = "gabrielm-ec2"
  }
}
